<?xml version="1.0"?>
<package format="2">
  <name>airsim_tutorial_pkgs</name>
  <version>0.0.1</version>
  <description>AirSim ROS tutorials</description>

  <maintainer email="ratneshmadaan@gmail.com">Ratnesh Madaan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>nodelet</build_depend> -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>airsim_ros_pkgs</build_depend>

  <!-- <exec_depend>nodelet</exec_depend> -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>airsim_ros_pkgs</exec_depend>

</package>